--- a/L5/Views/Home/Edit.cshtml
+++ b/L5/Views/Home/Edit.cshtml
@@ -1,4 +1,4 @@
-@model L5.Models.Movie
+@model L5.Models.MovieDto
 
 @{
     ViewData["Title"] = "Edit";
@@ -28,6 +28,17 @@
                 <label asp-for="Description" class="control-label"></label>
                 @Html.EditorFor(m => m.Description)
                 <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <datalist id="genres">
+                    @foreach (var item in Model.AllGenres)
+                    {
+                    @Html.Raw($"<option value=\"{item}\">")
+                    }
+                </datalist>
+                <label asp-for="Genre" class="control-label"></label>
+                <input asp-for="Genre" class="form-control" list="genres"/>
+                <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TrailerLink" class="control-label"></label>
